Setup sequelize for connection

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "REST API for monitoring app - Express JS MySQL Sequelize",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "db:create": "npx sequelize-cli db:create",
+    "db:drop": "npx sequelize-cli db:drop"
   },
   "repository": {
     "type": "git",
@@ -30,5 +32,8 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "sequelize": "^6.19.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1"
   }
 }
