change new directory for save migration, seeders files

--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,9 +1,7 @@
-require("babel-register");
-
 const path = require('path');
 
 module.exports = {
   'models-path': path.resolve('app' ,'models'),
-  'seeders-path': path.resolve('app' ,'seeders'),
-  'migrations-path': path.resolve('app' ,'migrations')
+  'seeders-path': path.resolve('app' ,'database' ,'seeders'),
+  'migrations-path': path.resolve('app', 'database' ,'migrations')
 }
