Create seeder file for activity

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon server.js",
     "db:create": "npx sequelize-cli db:create",
     "db:drop": "npx sequelize-cli db:drop",
-    "migrate": "npx sequelize-cli db:migrate"
+    "migrate": "npx sequelize-cli db:migrate",
+    "seeding": "npx sequelize-cli db:seed:all"
   },
   "repository": {
     "type": "git",
